<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchParent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/et_crime_title"
        style="@style/MatchWidthWrapHeight"
        android:hint="@string/crime_title_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        style="?android:listSeparatorTextViewStyle"/>

    <Button
        android:id="@+id/btn_crime_date"
        style="@style/MatchWidthWrapHeight"
        android:layout_marginLeft="@dimen/crime_date_margins"
        android:layout_marginRight="@dimen/crime_date_margins"/>

    <CheckBox
        android:id="@+id/chk_crime_solved"
        style="@style/MatchWidthWrapHeight"
        android:layout_marginLeft="@dimen/crime_solved_margins"
        android:layout_marginRight="@dimen/crime_solved_margins"
        android:text="@string/crime_solved_label"/>
    
    <Button
        android:id="@+id/btn_crime_suspect"
        style="@style/MatchWidthWrapHeight"
        android:layout_marginLeft="@dimen/crime_suspect_margins"
        android:layout_marginRight="@dimen/crime_suspect_margins"
        android:text="@string/crime_suspect_text"/>

    <Button
        android:id="@+id/btn_crime_report"
        style="@style/MatchWidthWrapHeight"
        android:layout_marginLeft="@dimen/crime_report_margins"
        android:layout_marginRight="@dimen/crime_report_margins"
        android:text="@string/crime_report_text"/>

</LinearLayout>